--- a/POO_MOO/IHM.MVVM/Views/MainWindow.xaml
+++ b/POO_MOO/IHM.MVVM/Views/MainWindow.xaml
@@ -1,6 +1,45 @@
-﻿<NavigationWindow x:Class="IHM.MVVM.Views.MainWindow"
+﻿<Window x:Class="IHM.MVVM.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SmallWorld" Height="350" Width="500" Source="Home.xaml">
-
-</NavigationWindow>
+        Title="SmallWorld" Height="500" Width="800">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Margin="0,30,0,0">SmallWorld</TextBlock>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center">
+            <Label  FontSize="20" FontWeight="Bold" Content="Select map size:"/>
+            <RadioButton FontSize="20" GroupName="mapSize" IsChecked="True" Content="Demo"/>
+            <RadioButton  FontSize="20" GroupName="mapSize" Content="Small"/>
+            <RadioButton FontSize="20" GroupName="mapSize" Content="Normal"/>
+        </StackPanel>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" Orientation="Vertical" Margin="10,0,0,0">
+                <Label  FontSize="20" FontWeight="Bold" Content="Player 1:" Margin="10,0,0,5"/>
+                <Label  FontSize="15" FontWeight="Bold" Content="Name:" Margin="10,0,0,0"/>
+                <TextBox Margin="5,0,60,0" TextChanged="TextBox_TextChanged"/>
+                <Label  FontSize="15" FontWeight="Bold" Content="Race:" Margin="10,0,0,0"/>
+                <RadioButton FontSize="15" GroupName="p1Race" IsChecked="True" Content="Elf"/>
+                <RadioButton  FontSize="15" GroupName="p1Race" Content="Orc"/>
+                <RadioButton FontSize="15" GroupName="p1Race" Content="Human"/>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Orientation="Vertical" Margin="10,0,0,0">
+                <Label  FontSize="20" FontWeight="Bold" Content="Player 2:" Margin="10,0,0,5"/>
+                <Label  FontSize="15" FontWeight="Bold" Content="Name:" Margin="10,0,0,0"/>
+                <TextBox Margin="5,0,60,0" TextChanged="TextBox_TextChanged"/>
+                <Label  FontSize="15" FontWeight="Bold" Content="Race:" Margin="10,0,0,0"/>
+                <RadioButton FontSize="15" GroupName="p2Race" IsChecked="True" Content="Elf"/>
+                <RadioButton  FontSize="15" GroupName="p2Race" Content="Orc"/>
+                <RadioButton FontSize="15" GroupName="p2Race" Content="Human"/>
+            </StackPanel>
+        </Grid>
+        <Button Grid.Row="3" FontSize="50" VerticalAlignment="Bottom">Play</Button>
+    </Grid>
+</Window>
