--- a/POO_MOO/IHM.MVVM/App.xaml
+++ b/POO_MOO/IHM.MVVM/App.xaml
@@ -1,9 +1,5 @@
 ﻿<Application x:Class="IHM.MVVM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:IHM.MVVM"
-             StartupUri="Views/MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             xmlns:local="clr-namespace:IHM.MVVM">
 </Application>
