--- a/POO_MOO/IHM.MVVM/Views/StartupWindow.xaml
+++ b/POO_MOO/IHM.MVVM/Views/StartupWindow.xaml
@@ -6,9 +6,11 @@
         xmlns:local="clr-namespace:IHM.MVVM"
         xmlns:Dev="clr-namespace:dev;assembly=dev"
         mc:Ignorable="d"
-        Title="SmallWorld" Height="500" Width="1000">
+        Title="SmallWorld" Height="563" Width="1000">
     <Grid>
-
+        <Grid.Background>
+            <ImageBrush ImageSource="bg.jpg"/>
+        </Grid.Background>
         <Grid.Resources>
             <local:Converter x:Key="conv" />
         </Grid.Resources>
@@ -18,13 +20,13 @@
             <RowDefinition Height="2*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Margin="0,30,0,0">SmallWorld</TextBlock>
+        <Image Source="header.png" Width="400" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center">
             <Label  FontSize="20" FontWeight="Bold" Content="Select map size:"/>
 
-            <RadioButton IsChecked="{Binding Path=map_type, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:MapType.Demo},UpdateSourceTrigger=PropertyChanged}"  Content="Demo" GroupName="mapSize" />
-            <RadioButton IsChecked="{Binding Path=map_type, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:MapType.Small},UpdateSourceTrigger=PropertyChanged}"  Content="Small" GroupName="mapSize"/>
-            <RadioButton IsChecked="{Binding Path=map_type, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:MapType.Standard},UpdateSourceTrigger=PropertyChanged}"  Content="Standard" GroupName="mapSize"/>
+            <RadioButton FontSize="20" VerticalContentAlignment="Center" Margin="0,0,15,0" IsChecked="{Binding Path=map_type, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:MapType.Demo},UpdateSourceTrigger=PropertyChanged}"  Content="Demo" GroupName="mapSize" />
+            <RadioButton FontSize="20" VerticalContentAlignment="Center" Margin="0,0,15,0" IsChecked="{Binding Path=map_type, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:MapType.Small},UpdateSourceTrigger=PropertyChanged}"  Content="Small" GroupName="mapSize"/>
+            <RadioButton FontSize="20" VerticalContentAlignment="Center" Margin="0,0,15,0" IsChecked="{Binding Path=map_type, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:MapType.Standard},UpdateSourceTrigger=PropertyChanged}"  Content="Standard" GroupName="mapSize"/>
 
         </StackPanel>
         <Grid Grid.Row="2">
@@ -35,22 +37,17 @@
             <StackPanel Grid.Column="0" Orientation="Vertical" Margin="10,0,0,0">
                 <Label  FontSize="20" FontWeight="Bold" Content="Player 1:" Margin="10,0,0,5"/>
                 <Label  FontSize="15" FontWeight="Bold" Content="Name:" Margin="10,0,0,0"/>
-                <TextBox Margin="5,0,60,0" Text="{Binding p1Name}"/>
+                <TextBox Margin="5,0,0,0" Text="{Binding p1Name}" Width="150" HorizontalAlignment="Left"/>
                 <Label  FontSize="15" FontWeight="Bold" Content="Race:" Margin="10,0,0,0"/>
 
                 <RadioButton IsChecked="{Binding Path=p1Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Elf},UpdateSourceTrigger=PropertyChanged}"  Content="Elf" GroupName="p1Race"/>
                 <RadioButton IsChecked="{Binding Path=p1Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Orc},UpdateSourceTrigger=PropertyChanged}"  Content="Orc" GroupName="p1Race"/>
                 <RadioButton IsChecked="{Binding Path=p1Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Human},UpdateSourceTrigger=PropertyChanged}"  Content="Human" GroupName="p1Race"/>
-                <!--
-                <RadioButton FontSize="15" GroupName="p1Race" IsChecked="True" Content="Elf"/>
-                <RadioButton  FontSize="15" GroupName="p1Race" Content="Orc"/>
-                <RadioButton FontSize="15" GroupName="p1Race" Content="Human"/>
-                -->
             </StackPanel>
             <StackPanel Grid.Column="1" Orientation="Vertical" Margin="10,0,0,0">
                 <Label  FontSize="20" FontWeight="Bold" Content="Player 2:" Margin="10,0,0,5"/>
                 <Label  FontSize="15" FontWeight="Bold" Content="Name:" Margin="10,0,0,0"/>
-                <TextBox Margin="5,0,60,0" Text="{Binding p2Name}"/>
+                <TextBox Margin="5,0,0,0" Text="{Binding p2Name}" Width="150" HorizontalAlignment="Left"/>
                 <Label  FontSize="15" FontWeight="Bold" Content="Race:" Margin="10,0,0,0"/>
                 <RadioButton IsChecked="{Binding Path=p2Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Elf},UpdateSourceTrigger=PropertyChanged}"  Content="Elf" GroupName="p2Race"/>
                 <RadioButton IsChecked="{Binding Path=p2Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Orc},UpdateSourceTrigger=PropertyChanged}"  Content="Orc" GroupName="p2Race"/>
@@ -62,8 +59,8 @@
                 <ColumnDefinition Width="345*"/>
                 <ColumnDefinition Width="448*"/>
             </Grid.ColumnDefinitions>
-            <Button FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding Play}" Margin="4.8,12,350.6,12.4" Content="Play" Grid.Column="1" />
-            <Button FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding Load}" Margin="169.4,12,9.6,9.4" Content="Load game" Grid.Column="1" Height="73" Width="269" />
+            <Button FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding Play}" Content="Play" />
+            <Button FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding Load}" Content="Load game" Grid.Column="1" Height="73" Width="269" />
         </Grid>
 
     </Grid>
