--- a/POO_MOO/IHM.MVVM/Views/StartupWindow.xaml
+++ b/POO_MOO/IHM.MVVM/Views/StartupWindow.xaml
@@ -37,22 +37,22 @@
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0" Orientation="Vertical" Margin="10,0,0,0">
                 <Label  FontSize="20" FontWeight="Bold" Content="Player 1:" Margin="10,0,0,5"/>
-                <Label  FontSize="15" FontWeight="Bold" Content="Name:" Margin="10,0,0,0"/>
-                <TextBox Margin="5,0,0,0" Text="{Binding p1Name}" Width="150" HorizontalAlignment="Left"/>
-                <Label  FontSize="15" FontWeight="Bold" Content="Race:" Margin="10,0,0,0"/>
+                <Label  FontSize="20" FontWeight="Bold" Content="Name:" Margin="10,0,0,0"/>
+                <TextBox Margin="10,0,0,0" Text="{Binding p1Name}" Width="150" HorizontalAlignment="Left"/>
+                <Label FontSize="20" FontWeight="Bold" Content="Race:" Margin="10,0,0,0"/>
 
-                <RadioButton IsChecked="{Binding Path=p1Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Elf},UpdateSourceTrigger=PropertyChanged}"  Content="Elf" GroupName="p1Race"/>
-                <RadioButton IsChecked="{Binding Path=p1Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Orc},UpdateSourceTrigger=PropertyChanged}"  Content="Orc" GroupName="p1Race"/>
-                <RadioButton IsChecked="{Binding Path=p1Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Human},UpdateSourceTrigger=PropertyChanged}"  Content="Human" GroupName="p1Race"/>
+                <RadioButton Margin="10,0,0,0" FontSize="20" VerticalContentAlignment="Center" IsChecked="{Binding Path=p1Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Elf},UpdateSourceTrigger=PropertyChanged}"  Content="Elf" GroupName="p1Race"/>
+                <RadioButton Margin="10,0,0,0" FontSize="20" VerticalContentAlignment="Center" IsChecked="{Binding Path=p1Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Orc},UpdateSourceTrigger=PropertyChanged}"  Content="Orc" GroupName="p1Race"/>
+                <RadioButton Margin="10,0,0,0" FontSize="20" VerticalContentAlignment="Center" IsChecked="{Binding Path=p1Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Human},UpdateSourceTrigger=PropertyChanged}"  Content="Human" GroupName="p1Race"/>
             </StackPanel>
             <StackPanel Grid.Column="1" Orientation="Vertical" Margin="10,0,0,0">
                 <Label  FontSize="20" FontWeight="Bold" Content="Player 2:" Margin="10,0,0,5"/>
-                <Label  FontSize="15" FontWeight="Bold" Content="Name:" Margin="10,0,0,0"/>
-                <TextBox Margin="5,0,0,0" Text="{Binding p2Name}" Width="150" HorizontalAlignment="Left"/>
-                <Label  FontSize="15" FontWeight="Bold" Content="Race:" Margin="10,0,0,0"/>
-                <RadioButton IsChecked="{Binding Path=p2Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Elf},UpdateSourceTrigger=PropertyChanged}"  Content="Elf" GroupName="p2Race"/>
-                <RadioButton IsChecked="{Binding Path=p2Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Orc},UpdateSourceTrigger=PropertyChanged}"  Content="Orc" GroupName="p2Race"/>
-                <RadioButton IsChecked="{Binding Path=p2Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Human},UpdateSourceTrigger=PropertyChanged}"  Content="Human" GroupName="p2Race"/>
+                <Label  FontSize="20" FontWeight="Bold" Content="Name:" Margin="10,0,0,0"/>
+                <TextBox Margin="10,0,0,0" Text="{Binding p2Name}" Width="150" HorizontalAlignment="Left"/>
+                <Label  FontSize="20" FontWeight="Bold" Content="Race:" Margin="10,0,0,0"/>
+                <RadioButton Margin="10,0,0,0" FontSize="20" VerticalContentAlignment="Center" IsChecked="{Binding Path=p2Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Elf},UpdateSourceTrigger=PropertyChanged}"  Content="Elf" GroupName="p2Race"/>
+                <RadioButton Margin="10,0,0,0" FontSize="20" VerticalContentAlignment="Center" IsChecked="{Binding Path=p2Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Orc},UpdateSourceTrigger=PropertyChanged}"  Content="Orc" GroupName="p2Race"/>
+                <RadioButton Margin="10,0,0,0" FontSize="20" VerticalContentAlignment="Center" IsChecked="{Binding Path=p2Race, Converter={StaticResource conv}, ConverterParameter={x:Static Dev:Race.Human},UpdateSourceTrigger=PropertyChanged}"  Content="Human" GroupName="p2Race"/>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="3">
@@ -60,8 +60,8 @@
                 <ColumnDefinition Width="345*"/>
                 <ColumnDefinition Width="448*"/>
             </Grid.ColumnDefinitions>
-            <Button FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding Play}" Content="Play" />
-            <Button FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding Load}" Content="Load game" Grid.Column="1" Height="73" Width="269" />
+            <Button FontSize="50" Background="White" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding Play}" Content="Play" />
+            <Button FontSize="50" Background="White" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding Load}" Content="Load game" Grid.Column="1" Height="73" Width="269" />
         </Grid>
 
     </Grid>
